<resources>
    <string name="app_name">SymptoMed</string>
    <string name="name">Nama Saya…</string>
    <string name="age">Masukkan Umur Anda</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Berikutnya</string>
    <string name="who">Halo, Siapa namamu?</string>
    <string name="email">Type your email</string>
    <string name="password">Type your password</string>
    <string name="signup">Don\'t have an account? Sign Up here!</string>
    <string name="signin">Already have an account? Sign In here!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_a">Hello!</string>
    <string name="sign_in_b">Welcome to SymptoMed</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_a">Welcome!</string>
    <string name="sign_up_b">Create your account</string>
    <string name="already_signed_up">Already have an account? Sign in!</string>
    <string name="logged_out">You\'re logged out</string>
    <string name="logout">Logout</string>
    <string name="clear_preferences">Clear Preferences</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="const_age">Umur</string>
    <string name="dob">TTL</string>
    <string name="email_address">Alamat Email</string>
    <string name="masukkan_gejala">Masukkan Gejala</string>
    <string name="prediksi">Prediksi</string>
    <string name="back">Back</string>
    <string name="example_gejala">Saya merasakan pusing, demam, \ndan batuk</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="probabilitas">Probabilitas</string>
    <string name="saran">Saran</string>
    <string name="wikipedia">Penjelasan terkait penyakit ini lebih lanjut dapat mengunjungi <u>halaman ini.</u></string>
    <string name="peringatan">Perlu diketahui bahwa meskipun aplikasi dirancang untuk membantu pengambilan keputusan medis dan memeriksa gejala, diagnosis akhir harus dilakukan oleh profesional medis berlisensi. Kami merekomendasikan untuk mencari evaluasi dan pendapat tambahan sebelum membuat keputusan perawatan apa pun.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="terms_of_service">
        \nPLEASE READ THIS TERMS OF SERVICE AGREEMENT CAREFULLY. BY USING THE SYMPTOM APPLICATION ("THE APPLICATION"), YOU AGREE TO BE BOUND BY THE TERMS AND CONDITIONS STATED BELOW. IF YOU DO NOT AGREE TO THESE TERMS AND CONDITIONS, DO NOT USE THE APPLICATION.\n
        \nIntroduction\n
        \n1.1 The SymptoMed Application ("the Application") is designed to provide general information and guidance on common symptoms and health conditions. However, it is important to note that the Application is not intended to be a substitute for professional medical advice, diagnosis, or treatment.\n
        \n1.2 By using the Application, you acknowledge that the information provided is not comprehensive and may not cover all possible symptoms, diseases, or conditions. The Application should not be considered a substitute for consulting with a qualified healthcare professional.\n

        \nLimitations of the Application\n
        \n2.1 The Application is intended to provide general information and educational content on health-related topics. It may offer suggestions or recommendations based on the symptoms or information provided by the user, but it cannot provide a definitive diagnosis or replace professional medical judgment.\n
        \n2.2 The Application is not designed to provide emergency medical assistance. If you are experiencing a medical emergency, you should immediately seek professional medical help or contact your local emergency services.\n
        \n2.3 The Application does not take into account individual medical history, allergies, drug interactions, or other personal factors that could affect a diagnosis or treatment plan. Therefore, the Application should not be solely relied upon for making medical decisions.\n

        \nUser Responsibilities\n
        \n3.1 You understand and acknowledge that the Application is not a substitute for professional medical advice. You should always consult a qualified healthcare professional for diagnosis, treatment, and guidance regarding your specific symptoms or conditions.\n
        \n3.2You agree to use the Application responsibly and for informational purposes only. You will not rely solely on the Application for medical advice or treatment decisions.\n
        \n3.3 You acknowledge that any use of the Application is at your own risk, and SymptoMed and its affiliates shall not be held liable for any damages or harm arising from your use of the Application.\n

        \nIntellectual Property\n
        \n4.1 The SymptoMed Application, including all content, text, graphics, images, logos, and software, is the property of SymptoMed or its licensors and is protected by copyright and other intellectual property laws.\n
        \n4.2 You agree not to copy, modify, distribute, or create derivative works of the Application or its content without prior written consent from SymptoMed.\n

        \nPrivacy
        \n5.1 SymptoMed is committed to protecting your privacy and will handle your personal information in accordance with its Privacy Policy.\n
        \n5.2 By using the Application, you consent to the collection, use, and disclosure of your personal information as described in the Privacy Policy\n\n.
    </string>
    <string name="symptomed_terms_of_service">SYMPTOMED\n TERMS OF SERVICE</string>
    <string name="lanjut">Lanjut</string>
    <string name="prediksi_secara_offline">Prediksi secara Offline</string>
    <string name="prediksi_gejala">Prediksi Gejala</string>
    <string name="prediksi_secara_online">Prediksi secara Online</string>
    <string name="home">Home</string>
    <string name="faq">FAQ</string>
    <string name="profile">Profile</string>
    <string name="team">Team</string>
    <string name="profil">Profil</string>
    <string name="name_profile">Name</string>
    <string name="informasi_anda">Informasi Anda</string>
    <string name="umur">Umur</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="agree">Ya, saya setuju dengan perjanjian diatas</string>
</resources>